--- a/src/Login.html
+++ b/src/Login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--HTML Login page-->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +13,7 @@
 
 <body>
   <main id="main-holder">
-    <h1 id="login-header">Health Tracker Login</h1>
+    <h1 id="login-header">Health Tracker Login</h1> 
     <img src="Login.jpg" alt="login" width="500" height="150">
     
     <div id="login-error-msg-holder">
