--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!--Home page HTML-->
+
 <html>
     <head>
       <link href="style.css" rel="stylesheet"/> 
@@ -41,17 +43,6 @@
             <input type="button" class="button_css" value="Weight-BMI Readings">
           </div>
           
-          <!--<div class="buttons">
-            <button onclick="location.href='http://www.Blood Preasure Inputs.com'" type="button">
-              Blood Pressure Inputs</button>
-            <button onclick="location.href='http://Glucose Inputs.html'" type="button">
-              Glucose Inputs</button> 
-            <button onclick="location.href='http://www.Weight Inputs.com'" type="button">
-              Weight Inputs</button>    
-            <!--<button style="background-color:blue; border-color:blue; color:white">Blood Pressure Inputs</button>
-            <!--<button id="BPInputs">Blood Pressure Inputs</button>
-            <button style="background-color:blue; border-color:blue; color:white">Glucose Inputs</button>
-            <button style="background-color:blue; border-color:blue; color:white">Weight Inputs</button>-->
 
           
           </div>
