--- a/src/Login.html
+++ b/src/Login.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--Brad Burkett
 
+Login Page
+
+SWDV 691: Capstone Project
+-->
 <!--HTML Login page-->
 
 <head>
