--- a/src/WeightInputs.html
+++ b/src/WeightInputs.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
+<!--Brad Burkett
 
+Weight Inputs
+
+SWDV 691: Capstone Project
+-->
 <html>
-    <head>
-        <link href="style.css" rel="stylesheet"/> 
-        <a href="home.html">Home</a>
-        <a href="Blood Pressure Inputs.html">Blood Presure</a>
-        <a href="Glucose Inputs.html">Glucose</a>
-        <a href="Weight Inputs.html">Weight</a>   
 
-        <title>Health Tracker</title>
+<head>
+    <link href="style.css" rel="stylesheet" />
+    <a href="home.html">Home</a>
+    <a href="BloodPressureInputs.html">Blood Presure</a>
+    <a href="GlucoseInputs.html">Glucose</a>
+    <a href="WeightInputs.html">Weight</a>
+
+    <title>Health Tracker</title>
 
 </head>
+
 <body>
 
-    <center><h1>Health Tracker</h1></center>
-    <center><h2>Weight Inputs</h2></center>
+    <center>
+        <h1>Health Tracker</h1>
+    </center>
+    <center>
+        <h2>Weight Inputs</h2>
+    </center>
 
-    <div class = "infoClass">
+    <div class="infoClass">
         <h3 align="center">
 
             <p><mark>Try and weigh yourself on the same day and at the same time each week </mark></p><br><br><br><br>
 
-        
-        <form>  
-            <label>Week 1</label>  
-             <input type="text" name="Week 1">  
-                      <label>          Week 2 </label>  
-             <input type="Week 2" name="Week 2"><br><br><br><br> 
-             <label>Week 3</label>  
-             <input type="text" name="Week 3">  
-                      <label>          Week 4 </label>  
-             <input type="Week 4" name="Week 4"><br><br><br><br>  
-             <input type="button" class="button_css" value="Submit">  
-               
-        </form>
+
+            <form>
+                <label>Week 1</label>
+                <input type="text" name="Week 1">
+                <label> Week 2 </label>
+                <input type="Week 2" name="Week 2"><br><br><br><br>
+                <label>Week 3</label>
+                <input type="text" name="Week 3">
+                <label> Week 4 </label>
+                <input type="Week 4" name="Week 4"><br><br><br><br>
+                <input type="button" class="button_css" value="Submit">
+
+            </form>
